[workspace]
members = [
    "trending-rs"
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
pyo3 = "0.27.0"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["std"] }
serde_repr = "0.1.20"
snafu = "0.8.5"
tokio = { version = "1.28", features = ["full"]}

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true