[workspace]
members = [
  "trending-rs",
  "trending-py",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
readme  = "README.md"

[workspace.dependencies]
trending = { path = "./trending-rs" }

js-sys = "0.3"
pyo3 = "0.27.0"
reqwest = "0.12"
serde = "1.0"
serde_json = "1.0"
serde_repr = "0.1.20"
snafu = "0.8.5"
tokio = "1.28"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true