[package]
name = "trending"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["std"]}
snafu.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }

[features]
default = ["blocking"]
blocking = ["reqwest/blocking"]
